* 2006-06-17 Jeremy Sanders <jeremy@jeremysanders.net>
  - Supply __file__ to document file so that they know
    where the are on disk
  - Add example_import.vsz example file
  - Bump version to 0.10 ready for release
  - Don't need to distribute eps examples
	
* 2006-06-16 Jeremy Sanders <jeremy@jeremysanders.net>
  - Fixed Veusz to be able to run without being installed
  - Likewise change veusz_listen.py
	
* 2006-06-15 Jeremy Sanders <jeremy@jeremysanders.net>
  - Fix mix up of x and y in function plotting clipping
	
* 2006-06-14 Jeremy Sanders <jeremy@jeremysanders.net>
  - Fix filling under functions with start and end points
  - Fix embed.py under new regime
  - Add multiaxes example
  - Add linkeddatasets example
  - Fix bug with CSV asymmetric errors
  - Add csv_example plot
  - Add CSV details to documentation
	
* 2006-06-11 Jeremy Sanders <jeremy@jeremysanders.net>
  - Move to Subversion from CVS

* 2006-06-10 Jeremy Sanders <jeremy@jeremysanders.net>
  - Get rid of hack on PYTHONPATH - everything is imported
    from under veusz

* 2006-06-08 Jeremy Sanders <jeremy@jeremysanders.net>
  - Remove dependency of widget module on settings module
  - Move Painter from widgets to document
	
* 2006-06-03 Jeremy Sanders <jeremy@jeremysanders.net>
  - Remove obsolete pref.py from utils
	
* 2006-05-29 Jeremy Sanders <jeremy@jeremysanders.net>
  - Import path munging to avoid 2x importing
	
* 2006-05-28 Jeremy Sanders <jeremy@jeremysanders.net>
  - Further minor changes for rpm packaging

* 2006-05-27 Jeremy Sanders <jeremy@jeremysanders.net>
  - Move logo and icon for helping install
	
* 2006-05-21 Jeremy Sanders <jeremy@jeremysanders.net>
  - Further reference improvements
  - Add icon for stylesheet
  - Add default filename for exporting eps files
  - Clean up document operation batching
  - Add Import/Export stylesheet menu items
  
* 2006-04-24 Jeremy Sanders <jeremy@jeremysanders.net>
  - Fix new labels on actions
	