@@ -208,6 +208,10 @@ class Contour(plotters.GenericPlotter):
         x1, y1, x2, y2 = posn
         s = self.settings
         d = self.document
+
+        # do not paint if hidden
+        if s.hide:
+            return
         
         # get axes widgets
         axes = self.parent.getAxes( (s.xAxis, s.yAxis) )
