@@ -46,6 +46,10 @@ class Page(widget.Widget):
         # document should pass us the page bounds
         x1, y1, x2, y2 = parentposn
 
+        if self.settings.hide:
+            bounds = self.computeBounds(parentposn, painter)
+            return bounds
+
         painter.beginPaintingWidget(self, parentposn)
         painter.save()
         painter.veusz_page_size = (x2-x1, y2-y1)
