@@ -1,3 +1,8 @@
+* 2006-12-09 Jeremy Sanders <jeremy@jeremysanders.net>
+  - Add transparency for lines and fills
+  - Make default fill color linked to line color for plotters
+  - Add hide option to widgets, and to widget context menu
+	
 * 2006-06-17 Jeremy Sanders <jeremy@jeremysanders.net>
   - Supply __file__ to document file so that they know
     where the are on disk
